--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
     "fix-payments-scene": "tsx scripts/fix-payments-scene.ts",
     "content": "fumadocs-mdx",
     "email": "email dev --dir src/mail/templates --port 3333",
+    "preview": "opennextjs-cloudflare build && opennextjs-cloudflare preview",
+    "deploy": "opennextjs-cloudflare build && opennextjs-cloudflare deploy",
+    "upload": "opennextjs-cloudflare build && opennextjs-cloudflare upload",
+    "cf-typegen": "wrangler types --env-interface CloudflareEnv cloudflare-env.d.ts",
     "knip": "knip"
   },
   "dependencies": {
@@ -97,7 +101,7 @@
     "lucide-react": "^0.483.0",
     "motion": "^12.4.3",
     "nanoid": "^5.1.6",
-    "next": "16.1.0",
+    "next": "16.1.4",
     "next-intl": "^4.5.8",
     "next-safe-action": "^8.0.11",
     "next-themes": "^0.4.6",
@@ -134,7 +138,7 @@
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
-    "@opennextjs/cloudflare": "^1.11.0",
+    "@opennextjs/cloudflare": "^1.15.1",
     "@swc/helpers": "^0.5.17",
     "@tailwindcss/postcss": "^4.0.14",
     "@tanstack/eslint-plugin-query": "^5.83.1",
@@ -150,7 +154,7 @@
     "tailwindcss": "^4.0.14",
     "tsx": "^4.19.3",
     "typescript": "^5.8.3",
-    "wrangler": "^4.45.3",
-    "vite": "^7.2.1"
+    "vite": "^7.2.1",
+    "wrangler": "^4.60.0"
   }
 }
