--- a/biome.json
+++ b/biome.json
@@ -1,5 +1,5 @@
 {
-  "$schema": "https://biomejs.dev/schemas/1.9.4/schema.json",
+  "$schema": "https://biomejs.dev/schemas/2.3.12/schema.json",
   "vcs": {
     "enabled": false,
     "clientKind": "git",
@@ -7,34 +7,35 @@
   },
   "files": {
     "ignoreUnknown": true,
-    "ignore": [
-      ".next/**",
-      ".open-next/**",
-      ".wrangler/**",
-      ".cursor/**",
-      ".claude/**",
-      ".kiro/**",
-      ".conductor/**",
-      ".vscode/**",
-      ".source/**",
-      "node_modules/**",
-      "dist/**",
-      "build/**",
-      "src/db/**",
-      "tailwind.config.ts",
+    "includes": [
+      "**",
+      "!.next",
+      "!.open-next",
+      "!.wrangler",
+      "!.cursor",
+      "!.claude",
+      "!.kiro",
+      "!.conductor",
+      "!.vscode",
+      "!.source",
+      "!node_modules",
+      "!dist",
+      "!build",
+      "!src/db",
+      "!tailwind.config.ts",
       "cloudflare-env.d.ts",
       "open-next.config.ts",
-      "src/components/ui/*.tsx",
-      "src/components/magicui/*.tsx",
-      "src/components/diceui/*.tsx",
-      "src/components/animate-ui/*.tsx",
-      "src/components/tailark/*.tsx",
-      "src/components/ai-elements/*.tsx",
-      "src/components/data-table/**",
-      "src/app/[[]locale]/preview/**",
-      "src/payment/types.ts",
-      "src/credits/types.ts",
-      "src/types/index.d.ts"
+      "!src/components/ui",
+      "!src/components/magicui",
+      "!src/components/diceui",
+      "!src/components/animate-ui",
+      "!src/components/tailark",
+      "!src/components/ai-elements",
+      "!src/components/data-table",
+      "!src/app/\\[locale\\]/preview",
+      "!src/payment/types.ts",
+      "!src/credits/types.ts",
+      "!src/types/index.d.ts"
     ]
   },
   "formatter": {
@@ -45,9 +46,7 @@
     "formatWithErrors": true,
     "useEditorconfig": true
   },
-  "organizeImports": {
-    "enabled": true
-  },
+  "assist": { "actions": { "source": { "organizeImports": "on" } } },
   "linter": {
     "enabled": true,
     "rules": {
@@ -67,8 +66,11 @@
       "style": {
         "useTemplate": "off",
         "noNonNullAssertion": "off",
-        "useShorthandArrayType": "off",
-        "useNodejsImportProtocol": "off"
+        "useNodejsImportProtocol": "off",
+        "useConsistentArrayType": {
+          "level": "off",
+          "options": { "syntax": "shorthand" }
+        }
       },
       "a11y": {
         "useValidAnchor": "off",
@@ -82,6 +84,12 @@
       "quoteStyle": "single",
       "trailingCommas": "es5",
       "semicolons": "always"
+    }
+  },
+  "css": {
+    "parser": {
+      "cssModules": true,
+      "tailwindDirectives": true
     }
   }
 }
