--- a/biome.json
+++ b/biome.json
@@ -14,6 +14,7 @@
       "!.wrangler",
       "!.cursor",
       "!.claude",
+      "!.auto-claude",
       "!.kiro",
       "!.conductor",
       "!.vscode",
