--- a/package.json
+++ b/package.json
@@ -84,6 +84,8 @@
     "next-intl": "^4.7.0",
     "next-themes": "^0.4.6",
     "nuqs": "^2.8.6",
+    "pdf-lib": "^1.17.1",
+    "pdfjs-dist": "^5.4.530",
     "posthog-js": "^1.335.2",
     "radix-ui": "^1.4.3",
     "react": "^19.2.3",
