--- a/package.json
+++ b/package.json
@@ -71,13 +71,17 @@
     "cmdk": "1.1.1",
     "date-fns": "^4.1.0",
     "deepmerge": "^4.3.1",
+    "docx": "^9.5.1",
     "dotted-map": "^2.2.3",
     "embla-carousel-react": "^8.6.0",
+    "fast-xml-parser": "^5.3.4",
     "fumadocs-core": "^16.2.4",
     "fumadocs-mdx": "^13.0.2",
     "fumadocs-ui": "^16.2.4",
     "input-otp": "^1.4.2",
+    "jszip": "^3.10.1",
     "lucide-react": "^0.563.0",
+    "mammoth": "^1.11.0",
     "motion": "^12.4.3",
     "nanoid": "^5.1.6",
     "next": "16.1.6",
@@ -87,6 +91,7 @@
     "pdf-lib": "^1.17.1",
     "pdfjs-dist": "^5.4.530",
     "posthog-js": "^1.335.2",
+    "pptxgenjs": "^4.0.1",
     "radix-ui": "^1.4.3",
     "react": "^19.2.3",
     "react-day-picker": "9.13.0",
@@ -107,6 +112,7 @@
     "use-intl": "^4.7.0",
     "use-media": "^1.5.0",
     "vaul": "^1.1.2",
+    "xlsx": "^0.18.5",
     "zod": "^4.3.6",
     "zustand": "^5.0.10"
   },
