--- a/package.json
+++ b/package.json
@@ -109,6 +109,7 @@
     "swiper": "^11.2.5",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
+    "tesseract.js": "^7.0.0",
     "tw-animate-css": "^1.4.0",
     "use-intl": "^4.7.0",
     "use-media": "^1.5.0",
