--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -5,7 +5,7 @@
 {
   "$schema": "node_modules/wrangler/config-schema.json",
   "main": ".open-next/worker.js",
-  "name": "mksaas-template-cloudflare",
+  "name": "pdfuck",
   "compatibility_date": "2025-10-08",
   "compatibility_flags": [
     // Enable Node.js API
