--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "packageManager": "pnpm@10.26.1",
   "scripts": {
     "dev": "next dev -p 8787",
-    "build": "next build",
+    "build": "node scripts/build-with-fix.js",
     "build:analyze": "next experimental-analyze",
     "start": "next start",
     "postinstall": "fumadocs-mdx",
