--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@openpanel/nextjs": "^1.1.3",
     "@orama/orama": "^3.1.18",
     "@orama/tokenizers": "^3.1.18",
+    "@pdf-lib/fontkit": "^1.1.1",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-aspect-ratio": "^1.1.8",
